# dspml

./: README.md  bilinear.ml  bilinear.mli  boxMuller.ml  boxMuller.mli  de.ml  de.mli  de_wrap.c  dune  dune-project  filter_process.ml  filter_process.mli  hsv.ml  hsv.mli  intderiv.ml  intderiv.mli  lti_xfer.ml  lti_xfer.mli  minmax.ml  minmax.mli  myfftw.ml  myfftw.mli  nonlin.ml  nonlin.mli  oneliners.ml  oneliners.mli  remez.ml  remez.mli  remez_wrap.c  s_poles.ml  s_poles.mli  sfio.ml  sfio.mli  sp_misc.ml  sp_misc.mli  spectral.ml  spectral.mli  unwrapping.ml  unwrapping.mli  vec_search.ml  (+9 more)
doc/: lti.nb  quartic.wxmx
tests/: t_bessel.ml  t_bilin_butter_impulse.ml  t_bilin_linphase005.ml  t_bilin_lr_impulse.ml  t_bilin_polar.ml  t_common.ml  t_diffev_basic.ml  t_diffev_bench.h  t_diffev_complete.ml  t_diffev_functions.c  t_diffev_main.c  t_hsv.ml  t_myfftw_backward.ml  t_myfftw_forward.ml  t_remez.ml  t_remez_4bands.c  t_remez_lpf.c  t_xfer.ml  t_xfer_butter6.ml  t_xfer_cheby1_7.ml  t_xfer_cheby2_8.ml
